<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.v7.widget.CardView
        android:id="@+id/card_provide"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:animateLayoutChanges="true"
        app:cardCornerRadius="4dp"
        app:cardElevation="4dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/task_hand_name_what_you_do"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:gravity="start|left|center"
                android:text="@string/what_you_do"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/create_task_textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="start|left|center"
                android:text="@string/task_add"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/add_reminder_textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="start|left|center"
                android:text="@string/task_reminder"
                android:textAppearance="?android:attr/textAppearanceMedium" />
        </LinearLayout>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:animateLayoutChanges="true"
        app:cardCornerRadius="4dp"
        app:cardElevation="4dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/task_priority"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="start|left|center"
                android:layout_marginBottom="5dp"
                android:text="@string/assign_priority"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/view_colour_textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/view_by_colour"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:animateLayoutChanges="true"
                app:cardCornerRadius="4dp"
                app:cardElevation="4dp">

                <TextView
                    android:id="@+id/lowest"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/holo_orange_dark"
                    android:text="@string/lowest"
                    android:textAppearance="?android:attr/textAppearanceMedium" />
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:animateLayoutChanges="true"
                app:cardCornerRadius="4dp"
                app:cardElevation="4dp">

                <TextView
                    android:id="@+id/medium"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/holo_red_light"
                    android:text="@string/medium"
                    android:textAppearance="?android:attr/textAppearanceMedium" />
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:animateLayoutChanges="true"
                app:cardCornerRadius="4dp"
                app:cardElevation="4dp">

                <TextView
                    android:id="@+id/highest"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/holo_purple"
                    android:text="@string/highest"
                    android:textAppearance="?android:attr/textAppearanceMedium" />
            </android.support.v7.widget.CardView>
        </LinearLayout>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:animateLayoutChanges="true"
        app:cardCornerRadius="4dp"
        app:cardElevation="4dp"
        app:cardUseCompatPadding="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/to_add"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/mechanism_to_add"
                android:textAppearance="?android:attr/textAppearanceSmall" />
        </LinearLayout>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:animateLayoutChanges="true"
        app:cardCornerRadius="4dp"
        app:cardElevation="4dp"
        app:cardUseCompatPadding="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:text="@string/to_delete"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/mechanism"
                android:textAppearance="?android:attr/textAppearanceSmall" />
        </LinearLayout>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:animateLayoutChanges="true"
        app:cardCornerRadius="4dp"
        app:cardElevation="4dp"
        app:cardUseCompatPadding="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:text="@string/to_update"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/mechanism_to_update"
                android:textAppearance="?android:attr/textAppearanceSmall" />
        </LinearLayout>
    </android.support.v7.widget.CardView>
</LinearLayout>