<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp">

    <ScrollView
        android:id="@+id/scroll"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/task_hand_name_textView"
                android:layout_width="wrap_content"
                android:layout_height="43dp"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginLeft="20dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:gravity="center|start"
                android:shadowColor="#451b1b"
                android:text="@string/task_name"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <EditText
                android:id="@+id/task_hand_name_editText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/task_hand_name_textView"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_toEndOf="@+id/task_hand_name_textView"
                android:layout_toRightOf="@+id/task_hand_name_textView"
                android:gravity="center|center_horizontal"
                android:hint="Name of Task (Should Be Unique)"
                android:singleLine="true"
                android:textStyle="normal"
                android:typeface="normal" />

            <EditText
                android:id="@+id/task_hand_detail_editText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/task_hand_name_textView"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_alignStart="@+id/task_hand_name_textView"
                android:layout_below="@+id/task_hand_name_textView"
                android:layout_marginRight="10dp"
                android:layout_marginTop="10dp"
                android:breakStrategy="high_quality"
                android:ems="10"
                android:hint="Detail Of Task "
                android:inputType="textMultiLine"
                android:textStyle="normal"
                android:typeface="sans" />

            <EditText
                android:id="@+id/task_hand_date_editText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignEnd="@+id/task_hand_detail_editText"
                android:layout_alignLeft="@+id/task_hand_detail_editText"
                android:layout_alignRight="@+id/task_hand_detail_editText"
                android:layout_alignStart="@+id/task_hand_detail_editText"
                android:layout_below="@+id/task_hand_detail_editText"
                android:layout_marginTop="10dp"
                android:ems="10"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:hint="Enter Date of Reminder"
                android:inputType="date" />

            <EditText
                android:id="@+id/task_hand_time_editText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignEnd="@+id/task_hand_date_editText"
                android:layout_alignLeft="@+id/task_hand_date_editText"
                android:layout_alignRight="@+id/task_hand_date_editText"
                android:layout_alignStart="@+id/task_hand_date_editText"
                android:layout_below="@+id/task_hand_date_editText"
                android:ems="10"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:hint="Enter Time of Reminder"
                android:inputType="time" />

            <Button
                android:id="@+id/task_hand_save_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/task_hand_priority_spinner"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="22dp"
                android:background="@drawable/button"
                android:gravity="center"
                android:text="@string/save_button" />

            <Spinner
                android:id="@+id/task_hand_priority_spinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignStart="@+id/task_hand_name_editText"
                android:layout_below="@+id/task_hand_time_editText"
                android:layout_marginTop="32dp" />

            <TextView
                android:id="@+id/priority_textView"
                style="@style/Base.TextAppearance.AppCompat.Headline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignStart="@+id/task_hand_time_editText"
                android:layout_alignTop="@+id/task_hand_priority_spinner"
                android:layout_toStartOf="@+id/task_hand_save_button"
                android:gravity="center"
                android:text="@string/priority"
                android:textAppearance="?android:attr/textAppearanceMedium" />
        </RelativeLayout>
    </ScrollView>

</RelativeLayout>